test/files/neg/t12816.check
t12816.scala:29: error: reference to c is ambiguous;
it is both defined in the enclosing package p and inherited in the enclosing trait RR as method c (defined in trait T)
In Scala 2, symbols inherited from a superclass shadow symbols defined in an outer scope.
Such references are ambiguous in Scala 3. To continue using the inherited symbol, write `this.c`.
Or use `-Wconf:msg=legacy-binding:s` to silence this warning. [quickfixable]
Scala 3 migration messages are errors under -Xsource:3. Use -Wconf / @nowarn to filter them or add -Xmigration to demote them to warnings.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=p.RR.m3
    def m3 = c // warn
             ^
t12816.scala:33: error: reference to Z is ambiguous;
it is both defined in the enclosing package p and inherited in the enclosing trait RR as trait Z (defined in trait T)
In Scala 2, symbols inherited from a superclass shadow symbols defined in an outer scope.
Such references are ambiguous in Scala 3. To continue using the inherited symbol, write `this.Z`.
Or use `-Wconf:msg=legacy-binding:s` to silence this warning. [quickfixable]
Scala 3 migration messages are errors under -Xsource:3. Use -Wconf / @nowarn to filter them or add -Xmigration to demote them to warnings.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=p.RR.n3
    def n3: Z // warn
            ^
2 errors
